# watchdigest-for-minimax

./: .gitignore  LICENSE  README.md  SKILL.md  pyproject.toml
.github/workflows/: lint.yml
examples/: sample-report.md
src/watchdigest_for_minimax/: __init__.py  __main__.py  analyzer.py  chunker.py  config.py  downloader.py  http_server.py  minimax_client.py  prompt.py  reporter.py  transcoder.py  video_splitter.py
tests/: test_analyzer.py  test_chunker.py  test_config.py  test_downloader.py  test_prompt.py  test_video_splitter.py
