[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "watchdigest_for_minimax"
version = "0.1.0"
description = "OpenClaw skill: B站/抖音视频直接喂给 MiniMax-M3 多模态模型，一键生成结构化摘要"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "jinlio" }]
dependencies = [
    "anthropic>=0.40.0",
    "yt-dlp>=2024.0.0",
]

[project.optional-dependencies]
ffmpeg = ["imageio-ffmpeg>=0.5.0"]

[project.scripts]
watchdigest = "watchdigest_for_minimax.__main__:main"

[tool.hatch.build.targets.wheel]
packages = ["src/watchdigest_for_minimax"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = "imageio_ffmpeg.*"
ignore_missing_imports = true
